--- a/Code/3_mfcc_spectrogram_generation.ipynb
+++ b/Code/3_mfcc_spectrogram_generation.ipynb
@@ -6,8 +6,8 @@
    "id": "454dc57d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-10T00:39:05.106171Z",
-     "start_time": "2021-10-10T00:39:04.297305Z"
+     "end_time": "2021-10-10T16:52:38.410110Z",
+     "start_time": "2021-10-10T16:52:36.816917Z"
     }
    },
    "outputs": [],
@@ -30,8 +30,8 @@
    "id": "6a412173",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-10T00:39:05.109165Z",
-     "start_time": "2021-10-10T00:39:05.107417Z"
+     "end_time": "2021-10-10T16:52:39.095698Z",
+     "start_time": "2021-10-10T16:52:39.093055Z"
     }
    },
    "outputs": [],
@@ -44,12 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "da2934a3",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-10T00:39:05.523777Z",
-     "start_time": "2021-10-10T00:39:05.110164Z"
+     "end_time": "2021-10-10T16:52:47.059928Z",
+     "start_time": "2021-10-10T16:52:46.665365Z"
     }
    },
    "outputs": [
@@ -315,14 +315,19 @@
        "[5 rows x 521 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('../data/features_with_genres.csv', index_col=0)\n",
-    "df.index = df.index.astype('string')\n",
+    "def load_data_str_idx(filepath):\n",
+    "    \"\"\"Loads csv and converts index to string.\"\"\"\n",
+    "    df = pd.read_csv(filepath, index_col=0)\n",
+    "    df.index = df.index.astype('string')\n",
+    "    return df\n",
+    "    \n",
+    "df = load_data_str_idx('../data/features_with_genres.csv')\n",
     "df.head()"
    ]
   },
