--- a/Code/5_mfcc_image_recongnition_nn.ipynb
+++ b/Code/5_mfcc_image_recongnition_nn.ipynb
@@ -6,8 +6,8 @@
    "id": "4a155de9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-06T13:29:28.691334Z",
-     "start_time": "2021-07-06T13:29:27.547849Z"
+     "end_time": "2021-10-10T17:40:30.802361Z",
+     "start_time": "2021-10-10T17:40:28.926297Z"
     }
    },
    "outputs": [],
@@ -30,8 +30,8 @@
    "id": "965fec01",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-06T13:29:31.907387Z",
-     "start_time": "2021-07-06T13:29:31.904382Z"
+     "end_time": "2021-10-10T17:40:32.805232Z",
+     "start_time": "2021-10-10T17:40:32.802468Z"
     }
    },
    "outputs": [],
@@ -41,12 +41,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "4045d1de",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-07-06T13:34:43.185902Z",
-     "start_time": "2021-07-06T13:34:42.964531Z"
+     "end_time": "2021-10-10T17:40:35.114436Z",
+     "start_time": "2021-10-10T17:40:34.845939Z"
     }
    },
    "outputs": [
@@ -74,6 +74,48 @@
     "                                                  shuffle=True,\n",
     "                                                  interpolation='lanczos',\n",
     "                                                  subset='validation')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3e70166b",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-10T17:41:22.540327Z",
+     "start_time": "2021-10-10T17:41:22.391711Z"
+    },
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "test = train_generator.next()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "389aad7b",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-10T17:43:11.141661Z",
+     "start_time": "2021-10-10T17:43:11.138507Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(64, 216, 144, 1)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test[0].shape"
    ]
   },
   {
