--- a/Code/librosa_playground.ipynb
+++ b/Code/librosa_playground.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "6fba2017",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-10-11T18:20:01.996841Z",
-     "start_time": "2021-10-11T18:20:00.779265Z"
+     "end_time": "2021-10-13T15:03:06.578910Z",
+     "start_time": "2021-10-13T15:02:59.230520Z"
     }
    },
    "outputs": [],
@@ -18,6 +18,47 @@
     "import soundfile as sf\n",
     "import matplotlib.pyplot as plt\n",
     "from PIL import Image"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "08bf5e41",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-13T19:54:18.071662Z",
+     "start_time": "2021-10-13T19:54:14.016379Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "import tensorflow as tf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c02ea209",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2021-10-13T19:54:18.738368Z",
+     "start_time": "2021-10-13T19:54:18.719864Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tf.config.list_physical_devices('GPU')"
    ]
   },
   {
@@ -1295,9 +1336,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:audio_project_2] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-audio_project_2-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1309,7 +1350,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
